 =======================================================================
 ==CHANGES.txt
 =======================================================================

Current Development 0.5-SNAPSHOT

* GORA-332 fix record.vm template to generate deepCopyToReadOnlyBuffer method (drazzib aka Damien Raude-Morvan via hsaputra)

* GORA-331 Gora 0.4 compiler crash with "enum" type (drazzib aka Damien Raude-Morvan via hsaputra)

* GORA-336 MongoFilterUtil: missing ref link when creating new instance of factory (drazzib via lewismc)

* GORA-260 Make Solrj solr server impl configurable from within gora.properties (lewismc)

* GORA-199 MongoDB support for Gora ( Damien Raude-Morvan)

* GORA-333 Move README to markdown for better rendering on Github (lewismc)

* GORA-329 Update all SCM links in * pom.xml's (lewismc)

* GORA-325 Add Gora 0.4 Javadoc to site (lewismc)

Gora 0.4 release: (14/04/2014)
Release Report: http://s.apache.org/4lx

* GORA-201 Upgrade HBase to 0.94.13 (various)

* GORA-292 Upgrade dependency to Accumulo 1.5 (Akber Choudhry via lewismc)

* GORA-245 Upgrade to Avro 1.7.X in gora-cassandra (lewismc, Talat, Uyarer, rmarroquin)

* GORA-94 Upgrade to Apache Avro 1.7.x (Ed Kohlwey, lewismc, ferdy, yasin tamer, alparslanavci, Talat Uyarer, rmarroquin)

* GORA-106 Migrate Gora website documentation to Apache CMS (lewismc)

* GORA-296 Improve 'Keyclass and nameclass match' logging in HBaseStore (rmarroquin via lewismc)

* GORA-246 Upgrade to Avro 1.7.X in gora-hbase (Alparslan Avcı, rmarroquin, lewismc via lewismc)

* GORA-154 delete() method is not implemented at CassandraStore, and always returns false or 0 (rmarroquin via Kazuomi Kashii)

* GORA-204 Don't store empty arrays in CassandraClient#addGenericArray(), addStatefulHashMap() and CassandraStore#addOrUpdateField(rmarroquin via lewismc)

* GORA-303 Upgrade to Avro 1.7.X in gora-solr (Talat UYARER)

* GORA-253 Add Facebook, Linkedin, Google+, Twitter, etc plugins to website (lewismc)
